fix: align CityJSON texture logic with spec and reference